# mesh_shader_surface_reconstruction

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
asset/environments/: papermill_irradiance.ktx
shader/: background.frag  basic.frag  bottom_grid.vert  compute.comp  full_screen.vert  kernel.glsl  marching_cubes_table.glsl  mesh.frag  mesh.vert  particle.vert  shared.glsl  shared.inc  surface.frag  surface.mesh  surface.vert  surface_vertex.vert  top_grid.vert
src/: app.hpp  main.cpp  pass.hpp  scene.hpp
